# videocr-PaddleOCR

./: .gitignore  Dockerfile  README.md  build_docker.sh  docker-compose.yml  example.py  pyproject.toml  requirements.txt  requirements_cpu.txt  run_docker.sh  server.py  setup.py  videocr_PaddleOCR.ipynb
videocr/: api.py  models.py  utils.py  video.py
