[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videocr"
version = "0.1.7"
description = "Extract hardcoded subtitles from videos using machine learning"
authors = [
  { name = "Yi Ge", email = "me@yige.ch" }
]
readme = "README.md"
requires-python = ">=3.7, <3.13"
keywords = [
    "ocr",
    "textdetection",
    "textrecognition",
    "paddleocr",
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
]
dependencies = [
  "thefuzz>=0.19",
  "python-Levenshtein>=0.12",
  "paddleocr>=2.6",
]

[project.urls]
Homepage = "https://github.com/devmaxxing/videocr-PaddleOCR"
Repository = "https://github.com/devmaxxing/videocr-PaddleOCR.git"
Issues = "https://github.com/devmaxxing/videocr-PaddleOCR/issues"
